force-app/main/default/objects/Appointment__c/fields/Appointment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Appointment_DateTime__c</fullName>
    <label>Appointment DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>