force-app/main/default/objects/Appointment__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>