force-app/main/default/objects/Appointment__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason For Visit</label>
    <type>TextArea</type>
</CustomField>