force-app/main/default/objects/Appointment__c/validationRules/AppointmentTimeRule.validationRule-meta.xml
<ValidationRule>
    <fullName>AppointmentTimeRule</fullName>
    <active>true</active>
    <errorConditionFormula>Appointment_DateTime__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Appointment_DateTime__c</errorDisplayField>
    <errorMessage>Cannot schedule an appointment in past</errorMessage>
</ValidationRule>